--- a/MilestoneProjects10-12/MilestoneProjects10-12/Base.lproj/Main.storyboard
+++ b/MilestoneProjects10-12/MilestoneProjects10-12/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="tgx-Ol-V5S">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="abo-uA-1hC">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -31,10 +31,29 @@
                             <outlet property="delegate" destination="tgx-Ol-V5S" id="LgJ-IP-zN1"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="6Ax-1m-oTq"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SwA-VA-uNa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-618" y="-19"/>
+            <point key="canvasLocation" x="310.76923076923077" y="-19.194312796208528"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="t07-MF-9g4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="abo-uA-1hC" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1TD-fC-GBa">
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tgx-Ol-V5S" kind="relationship" relationship="rootViewController" id="43r-w6-7RL"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Whf-cN-UJw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-618.46153846153845" y="-19.194312796208528"/>
         </scene>
     </scenes>
     <resources>
