--- a/MilestoneProjects10-12/MilestoneProjects10-12/Base.lproj/Main.storyboard
+++ b/MilestoneProjects10-12/MilestoneProjects10-12/Base.lproj/Main.storyboard
@@ -17,13 +17,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="kUi-Mo-GoC">
-                                <rect key="frame" x="0.0" y="50" width="390" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Photo" rowHeight="120" id="kUi-Mo-GoC" customClass="PhotoCell" customModule="MilestoneProjects10_12" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="390" height="120"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="kUi-Mo-GoC" id="Qyj-B6-n0u">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="359.66666666666669" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ef-lG-a69">
+                                            <rect key="frame" x="20" y="10" width="100" height="100"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="100" id="5kI-iQ-x7L"/>
+                                                <constraint firstAttribute="height" constant="100" id="hIK-eu-z5z"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2tu-x0-VoZ">
+                                            <rect key="frame" x="130" y="11" width="221.66666666666663" height="98"/>
+                                            <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lorem sapien, feugiat vel elit quis, luctus sagittis tellus. Sed laoreet porta odio vel suscipit. Suspendisse id dictum lorem, ut blandit eros.</string>
+                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="2tu-x0-VoZ" secondAttribute="trailing" id="4P0-5P-aoB"/>
+                                        <constraint firstItem="2tu-x0-VoZ" firstAttribute="top" secondItem="Qyj-B6-n0u" secondAttribute="topMargin" id="XJz-eK-mHB"/>
+                                        <constraint firstItem="9ef-lG-a69" firstAttribute="centerY" secondItem="Qyj-B6-n0u" secondAttribute="centerY" id="Xdh-bt-PJd"/>
+                                        <constraint firstItem="2tu-x0-VoZ" firstAttribute="leading" secondItem="9ef-lG-a69" secondAttribute="trailing" constant="10" id="YBX-Vr-Zys"/>
+                                        <constraint firstItem="9ef-lG-a69" firstAttribute="leading" secondItem="Qyj-B6-n0u" secondAttribute="leadingMargin" id="iyr-1v-UtS"/>
+                                        <constraint firstItem="2tu-x0-VoZ" firstAttribute="centerY" secondItem="Qyj-B6-n0u" secondAttribute="centerY" id="qjy-3H-Llo"/>
+                                        <constraint firstItem="2tu-x0-VoZ" firstAttribute="bottom" secondItem="Qyj-B6-n0u" secondAttribute="bottomMargin" id="yZm-RU-sMx"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="captionLabel" destination="2tu-x0-VoZ" id="Unk-dw-y6G"/>
+                                    <outlet property="photoView" destination="9ef-lG-a69" id="UIh-hy-IY7"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
