--- a/MilestoneProjects10-12/MilestoneProjects10-12/Base.lproj/Main.storyboard
+++ b/MilestoneProjects10-12/MilestoneProjects10-12/Base.lproj/Main.storyboard
@@ -24,7 +24,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="359.66666666666669" height="120"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ef-lG-a69">
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9ef-lG-a69">
                                             <rect key="frame" x="20" y="10" width="100" height="100"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="100" id="5kI-iQ-x7L"/>
