--- a/MilestoneProjects10-12/MilestoneProjects10-12/Base.lproj/Main.storyboard
+++ b/MilestoneProjects10-12/MilestoneProjects10-12/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -66,6 +67,42 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SwA-VA-uNa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="310.76923076923077" y="-19.194312796208528"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="KTn-NX-dLn">
+            <objects>
+                <viewController id="iAy-fs-PE6" customClass="DetailViewController" customModule="MilestoneProjects10_12" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4Ba-aw-SRq">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RKS-Gi-f6J">
+                                <rect key="frame" x="16" y="63.000000000000007" width="358" height="101.66666666666669"/>
+                                <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus lorem sapien, feugiat vel elit quis, luctus sagittis tellus. Sed laoreet porta odio vel suscipit. Suspendisse id dictum lorem, ut blandit eros.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fKG-tV-Q3E">
+                                <rect key="frame" x="16" y="180.66666666666669" width="358" height="629.33333333333326"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="swQ-gI-Clx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="swQ-gI-Clx" firstAttribute="trailing" secondItem="RKS-Gi-f6J" secondAttribute="trailing" constant="16" id="Gtg-NU-2WP"/>
+                            <constraint firstItem="swQ-gI-Clx" firstAttribute="bottom" secondItem="fKG-tV-Q3E" secondAttribute="bottom" id="RPJ-Wh-g31"/>
+                            <constraint firstItem="RKS-Gi-f6J" firstAttribute="top" secondItem="swQ-gI-Clx" secondAttribute="top" constant="16" id="Zjj-jX-CNZ"/>
+                            <constraint firstItem="swQ-gI-Clx" firstAttribute="trailing" secondItem="fKG-tV-Q3E" secondAttribute="trailing" constant="16" id="bib-e9-eY8"/>
+                            <constraint firstItem="RKS-Gi-f6J" firstAttribute="leading" secondItem="swQ-gI-Clx" secondAttribute="leading" constant="16" id="sJi-XB-wld"/>
+                            <constraint firstItem="fKG-tV-Q3E" firstAttribute="leading" secondItem="swQ-gI-Clx" secondAttribute="leading" constant="16" id="tsM-8j-hKI"/>
+                            <constraint firstItem="fKG-tV-Q3E" firstAttribute="top" secondItem="RKS-Gi-f6J" secondAttribute="bottom" constant="16" id="vH9-Ti-E2X"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rot-8h-MRl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1250.7692307692307" y="-19.194312796208528"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="t07-MF-9g4">
