--- a/Project13/Project13/Base.lproj/Main.storyboard
+++ b/Project13/Project13/Base.lproj/Main.storyboard
@@ -17,10 +17,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MXc-c0-J3b">
-                                <rect key="frame" x="16" y="91" width="358" height="470"/>
+                                <rect key="frame" x="16" y="91" width="358" height="607.66666666666663"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TZk-L9-2jy">
-                                        <rect key="frame" x="10" y="10" width="338" height="450"/>
+                                        <rect key="frame" x="10" y="10" width="338" height="587.66666666666663"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -32,7 +32,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Intensity:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gmd-Xr-IT5">
-                                <rect key="frame" x="16" y="585" width="70" height="21"/>
+                                <rect key="frame" x="16" y="722.66666666666663" width="70" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="1oi-Xu-8mZ"/>
                                 </constraints>
@@ -41,18 +41,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kTB-44-tyy">
-                                <rect key="frame" x="92" y="581" width="284" height="30"/>
+                                <rect key="frame" x="92" y="718.66666666666663" width="284" height="30"/>
                             </slider>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ChE-mG-saL">
-                                <rect key="frame" x="16" y="618" width="130" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ChE-mG-saL">
+                                <rect key="frame" x="16" y="755.66666666666663" width="130" height="34.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="130" id="liV-7u-WIc"/>
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Change Filter"/>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6QE-JE-IfL">
-                                <rect key="frame" x="294" y="618" width="80" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6QE-JE-IfL">
+                                <rect key="frame" x="294" y="755.66666666666663" width="80" height="34.333333333333371"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="80" id="As0-Df-aJe"/>
                                 </constraints>
@@ -71,9 +71,10 @@
                             <constraint firstItem="MXc-c0-J3b" firstAttribute="trailing" secondItem="kTB-44-tyy" secondAttribute="trailing" id="ZwQ-h1-MbR"/>
                             <constraint firstItem="MXc-c0-J3b" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bMa-zc-bTf"/>
                             <constraint firstItem="Gmd-Xr-IT5" firstAttribute="leading" secondItem="ChE-mG-saL" secondAttribute="leading" id="eZZ-V0-p3p"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6QE-JE-IfL" secondAttribute="bottom" constant="20" id="hjY-Hc-9tA"/>
                             <constraint firstItem="MXc-c0-J3b" firstAttribute="leading" secondItem="Gmd-Xr-IT5" secondAttribute="leading" id="o86-rC-aB2"/>
                             <constraint firstItem="MXc-c0-J3b" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="pPz-VM-Pr1"/>
-                            <constraint firstAttribute="bottom" secondItem="kTB-44-tyy" secondAttribute="bottom" constant="234" id="sif-Bq-f8N"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="ChE-mG-saL" secondAttribute="bottom" constant="20" id="s2l-ed-7VR"/>
                             <constraint firstItem="kTB-44-tyy" firstAttribute="trailing" secondItem="6QE-JE-IfL" secondAttribute="trailing" id="stc-Aw-OCE"/>
                             <constraint firstItem="ChE-mG-saL" firstAttribute="top" secondItem="kTB-44-tyy" secondAttribute="bottom" constant="8" id="wfI-Qb-axt"/>
                             <constraint firstItem="ChE-mG-saL" firstAttribute="baseline" secondItem="6QE-JE-IfL" secondAttribute="baseline" id="zrt-zx-cXQ"/>
