--- a/Project13/Project13/Base.lproj/Main.storyboard
+++ b/Project13/Project13/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                             </label>
                             <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="kTB-44-tyy">
                                 <rect key="frame" x="92" y="718.66666666666663" width="284" height="30"/>
+                                <connections>
+                                    <action selector="intensityChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="clv-Tb-8wk"/>
+                                </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ChE-mG-saL">
                                 <rect key="frame" x="16" y="755.66666666666663" width="130" height="34.333333333333371"/>
@@ -50,6 +53,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Change Filter"/>
+                                <connections>
+                                    <action selector="changeFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rHw-31-i1c"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6QE-JE-IfL">
                                 <rect key="frame" x="294" y="755.66666666666663" width="80" height="34.333333333333371"/>
@@ -58,6 +64,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                <connections>
+                                    <action selector="save:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kCZ-MZ-SV8"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -81,6 +90,10 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="yPm-o2-gvg"/>
+                    <connections>
+                        <outlet property="imageView" destination="TZk-L9-2jy" id="Z6R-2Y-gz4"/>
+                        <outlet property="intensity" destination="kTB-44-tyy" id="C8e-Cb-9Va"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
